* Adding more options into Config.cfg
    + Setting all Global VARS into config file
    + Put all ratings into __init__ MainWindow

--- a/Config.cfg
+++ b/Config.cfg
@@ -1,3 +1,12 @@
+[Info]
+data_access = whazzup.txt
+
+[Time_Update]
+time = 300000
+
+[Database]
+db = ivao.db
+
 [Settings]
 use_proxy = 0
 auth = 0
