* Show label by Settings
    + Now can see the labels if is settings, by default not show
      to can see the Map ok :-)
    + Added options to show labels of Pilots and Controllers in
      the Settings_UI

--- a/Config.cfg
+++ b/Config.cfg
@@ -1,21 +1,23 @@
+[Settings]
+use_proxy = 0
+host = 
+port = 
+auth = 0
+user = 
+pass = 
+
 [Info]
-url = http://de1.www.ivao.aero/
 data_access = whazzup.txt
-
-[Map]
-auto_refresh = 2
-
-[Time_Update]
-time = 300000
+url = http://de1.www.ivao.aero/
 
 [Database]
 db = ivao.db
 
-[Settings]
-use_proxy = 0
-auth = 0
-host = 
-user = 
-pass = 
-port = 
+[Time_Update]
+time = 3000000
+
+[Map]
+auto_refresh = 0
+label_pilots = 0
+label_atcs = 0
 
