* Preparing UI for Scheduling
    + Added new tab for Scheduling in MainWindow
    + Added URLs for scheduling in Config.cfg
    + Update scheme of ivao_status.sql for scheduling tables
    + Update some ICAO Aircraft into DB
    + Adding 1 more Airport into DB

--- a/Config.cfg
+++ b/Config.cfg
@@ -9,6 +9,8 @@ pass =
 [Info]
 data_access = whazzup.txt
 url = http://de1.www.ivao.aero/
+scheduling_atc = http://www.ivao.aero/atcss/list.asp
+scheduling_flights = http://www.ivao.aero/flightss/list.asp
 
 [Database]
 db = ivao.db
