* Creating directory to sort the code modules
	- Solving issues tips and info from IVAO SOftDev

--- a/Config.cfg
+++ b/Config.cfg
@@ -7,8 +7,7 @@ user =
 pass = 
 
 [Info]
-data_access = whazzup.txt
-url = http://de1.www.ivao.aero/
+url = http://www.ivao.aero/whazzup/status.txt
 scheduling_atc = http://www.ivao.aero/atcss/list.asp
 scheduling_flights = http://www.ivao.aero/flightss/list.asp
 
