* Load Balance to get whazzup.txt file from IVAO
    + Now exist balance in the code for whazzup.txt and METAR
      (closed issue: #2)
    + Fixed bold name column for MainTab
    + Separate Settings from Menu option in ToolBar
    + Change the options Menu like original
    + Separate action for Scheduling like original
      This is a very low process parsing HTML table
    - Disable progressBar for the moment, to can get little bit more
      faster result.

--- a/Config.cfg
+++ b/Config.cfg
@@ -7,7 +7,7 @@ user =
 pass = 
 
 [Info]
-url = http://www.ivao.aero/whazzup/status.txt
+data_access = http://www.ivao.aero/whazzup/status.txt
 scheduling_atc = http://www.ivao.aero/atcss/list.asp
 scheduling_flights = http://www.ivao.aero/flightss/list.asp
 
